package baitap_05_06.observer.CA1;
public interface StreamData<T> {
    public void listen(T t);
}
